# py-asynkit

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CHANGES  CHANGES.md  C_EXTENSION_PLAN.md  LICENSE  OPTIONAL_C_EXTENSION_STRATEGY.md  PR_DESCRIPTION.md  README.md  debug_context.py  debug_simple.py  fast_build.sh  investigate_corostart_behavior.py  investigate_internal_state.py  pr_description.md  pyproject.toml  setup.py  test_close_method.py  test_context_310.py  test_context_isolation.py  test_context_methods.py  test_context_support.py  test_coro_methods.c  test_double_await_normal.py  test_eager_latency.py  test_exception_method.py  test_first_send_assertion.py  test_keyword_args.py  test_lifecycle_comparison.py  test_parametrize_example.py  test_simple_cext.py  test_throw_simple.py
.github/: OPTION_B_IMPLEMENTATION.md  copilot-instructions.md
.github/scripts/: extract_release_notes.py
.github/workflows/: ci.yml  test-release.yml  test_and_publish.yml  wheels.yml
docs/: INSTALLATION.md  MIGRATION_TO_UV.md  OPTIONAL_C_EXTENSION_STRATEGY.md  PYPI_DEPLOYMENT.md  README.md  README_EMOJI_EXAMPLES.md  README_IMPLEMENTATION_GUIDE.md  README_IMPROVEMENT_SUMMARY.md  README_PROPOSED_TOP_SECTION.md  README_QUICK_DECISION.md  README_RESTRUCTURING_RECOMMENDATIONS.md  README_VISUAL_COMPARISON.md  TESTING_PYPI_RELEASE.md  asyncio_timeout_incompatibility.md  eager_task_factory_performance.md  eager_tasks.md  task_interruption.md
examples/: async_code.py  example_interrupt.py  example_middleware_async.py  example_middleware_hybrid.py  example_resp.py  hybrid_code.py  middleware.py  nested.py  test_resp.py
scripts/: README.md  check_c_style.bat  check_c_style.sh  fast_build.sh  format_c.bat  format_c.py  format_c.sh
src/: async_df.py
src/asynkit/: __init__.py  compat.py  coroutine.py  eventloop.py  experimental.py  monitor.py  scheduling.py  susp.py  tools.py  uvloop.py
src/asynkit/_cext/: build.py  corostart.c
src/asynkit/experimental/: __init__.py  anyio.py  interrupt.py  priority.py  uvloop.py
src/asynkit/loop/: __init__.py  default.py  eventloop.py  extensions.py  schedulingloop.py  types.py
tests/: EAGER_TASK_TESTING.md  conftest.py  test_anyio.py  test_asyncgen_shutdown.py  test_cext.py  test_compat_eager.py  test_coro.py  test_defects.py  test_df.py  test_eager_task_factory.py  test_eager_task_factory_context.py  test_experimental.py  test_implementation_params.py  test_loop.py  test_monitor.py  test_namespace.py  test_susp.py  test_timeout_fix.py  test_tools.py
tests/experimental/: test_interrupt.py  test_priority.py
tests/misc/: corostart_trace_test.py  eager_task_factory_benchmark.py  perftest.py  uvicorn_repro.py
tests/typing/: test_asyncfunction.py  test_asyncmethod.py  test_enterasync.py  test_enterasyncmethod.py  test_leavesync.py  test_leavesyncmethod.py  test_sync_drive_async.py  test_sync_drive_asyncmethod.py  test_syncfunction.py  test_syncmethod.py
